Added Google Places and Reverse Geocoding

--- a/g5Mindr/Podfile
+++ b/g5Mindr/Podfile
@@ -2,18 +2,12 @@ platform :ios, '7.0'
 inhibit_all_warnings!
 
 target 'g5Mindr' do
-    
     source 'https://github.com/CocoaPods/Specs.git'
     
-    pod 'AFNetworking', '~> 2.6.3'
-    
-    pod 'PBJHexagon'
-    
     pod 'Mapbox-iOS-SDK'
-    pod 
-    
+    pod 'GoogleMaps'
+    pod 'AFNetworking', '~> 2.6.3'
     pod 'Mantle'
-    
     pod 'PBJHexagon'
     pod 'AMWaveTransition'
     
