Google Analytics integrated with PERSONAL EMAIL
Come up with a corporate gmail account.

--- a/g5Mindr/Podfile
+++ b/g5Mindr/Podfile
@@ -6,6 +6,7 @@ target 'g5Mindr' do
     
     pod 'Mapbox-iOS-SDK', '~> 3.3.0'
     pod 'GoogleMaps'
+    pod 'Google/Analytics'
     pod 'AFNetworking', '~> 2.6.3'
     pod 'Mantle'
     pod 'PBJHexagon'
