--- a/g5Mindr/g5Mindr/Info.plist
+++ b/g5Mindr/g5Mindr/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -21,11 +19,13 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.4</string>
+	<string>1.2.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>3</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MGLMapboxAccessToken</key>
@@ -41,6 +41,8 @@
 	<string>We need your location to better assist you buying tickets.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We need your location to better assist you buying tickets.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This Request Should Not Appear. Please Contact Suport Line.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Proxima Nova Soft W03 Semibold</string>
