Adding the new emoji PLISt stuff

--- a/g5Mindr/g5Mindr/Resources/Emojis/emoji_food.plist
+++ b/g5Mindr/g5Mindr/Resources/Emojis/emoji_food.plist
@@ -1,83 +1,101 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   emoji_food.plist
-   g5Mindr
-
-   Created by Charles Cliff on 8/9/16.
-   Copyright (c) 2016 Charles Cliff. All rights reserved.
--->
-<plist version="1.0">
-    <dict>
-        <key>emoticons</key>
-        <array>
-<string>🍏</string>
-<string>🍎</string>
-<string>🍐</string>
-<string>🍊</string>
-<string>🍋</string>
-<string>🍌</string>
-<string>🍉</string>
-<string>🍇</string>
-<string>🍓</string>
-<string>🍈</string>
-<string>🍒</string>
-<string>🍑</string>
-<string>🍍</string>
-<string>🍅</string>
-<string>🍆</string>
-<string>🌶</string>
-<string>🌽</string>
-<string>🍠</string>
-<string>🍯</string>
-<string>🍞</string>
-<string>🧀</string>
-<string>🍗</string>
-<string>🍖</string>
-<string>🍤</string>
-<string>🍳</string>
-<string>🍔</string>
-<string>🍟</string>
-<string>🌭</string>
-<string>🍕</string>
-<string>🍝</string>
-<string>🌮</string>
-<string>🌯</string>
-<string>🍜</string>
-<string>🍲</string>
-<string>🍥</string>
-<string>🍣</string>
-<string>🍱</string>
-<string>🍛</string>
-<string>🍙</string>
-<string>🍚</string>
-<string>🍘</string>
-<string>🍢</string>
-<string>🍡</string>
-<string>🍧</string>
-<string>🍨</string>
-<string>🍦</string>
-<string>🍰</string>
-<string>🎂</string>
-<string>🍮</string>
-<string>🍬</string>
-<string>🍭</string>
-<string>🍫</string>
-<string>🍿</string>
-<string>🍩</string>
-<string>🍪</string>
-<string>🍺</string>
-<string>🍻</string>
-<string>🍷</string>
-<string>🍸</string>
-<string>🍹</string>
-<string>🍾</string>
-<string>🍶</string>
-<string>🍵</string>
-<string>☕️</string>
-<string>🍼</string>
-<string>🍴</string>
-<string>🍽</string>
-        </array>
-    </dict>
-</plist>
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"><plist version="1.0"><dict><key>emoticons</key><array>
+<string>1f32d</string>
+<string>1f32e</string>
+<string>1f32f</string>
+<string>1f330</string>
+<string>1f331</string>
+<string>1f332</string>
+<string>1f333</string>
+<string>1f334</string>
+<string>1f335</string>
+<string>1f336</string>
+<string>1f337</string>
+<string>1f338</string>
+<string>1f339</string>
+<string>1f33d</string>
+<string>1f340</string>
+<string>1f341</string>
+<string>1f342</string>
+<string>1f343</string>
+<string>1f344</string>
+<string>1f345</string>
+<string>1f346</string>
+<string>1f347</string>
+<string>1f348</string>
+<string>1f349</string>
+<string>1f34a</string>
+<string>1f34b</string>
+<string>1f34c</string>
+<string>1f34d</string>
+<string>1f34e</string>
+<string>1f34f</string>
+<string>1f350</string>
+<string>1f351</string>
+<string>1f352</string>
+<string>1f353</string>
+<string>1f354</string>
+<string>1f355</string>
+<string>1f356</string>
+<string>1f357</string>
+<string>1f358</string>
+<string>1f359</string>
+<string>1f35a</string>
+<string>1f35b</string>
+<string>1f35c</string>
+<string>1f35d</string>
+<string>1f35e</string>
+<string>1f35f</string>
+<string>1f360</string>
+<string>1f361</string>
+<string>1f362</string>
+<string>1f363</string>
+<string>1f364</string>
+<string>1f365</string>
+<string>1f366</string>
+<string>1f367</string>
+<string>1f368</string>
+<string>1f369</string>
+<string>1f36a</string>
+<string>1f36b</string>
+<string>1f36c</string>
+<string>1f36d</string>
+<string>1f36e</string>
+<string>1f36f</string>
+<string>1f370</string>
+<string>1f371</string>
+<string>1f372</string>
+<string>1f373</string>
+<string>1f374</string>
+<string>1f375</string>
+<string>1f376</string>
+<string>1f377</string>
+<string>1f378</string>
+<string>1f379</string>
+<string>1f37a</string>
+<string>1f37b</string>
+<string>1f37c</string>
+<string>1f37d</string>
+<string>1f37e</string>
+<string>1f37f</string>
+<string>1f382</string>
+<string>1f942</string>
+<string>1f943</string>
+<string>1f944</string>
+<string>1f950</string>
+<string>1f951</string>
+<string>1f952</string>
+<string>1f953</string>
+<string>1f954</string>
+<string>1f955</string>
+<string>1f956</string>
+<string>1f957</string>
+<string>1f958</string>
+<string>1f959</string>
+<string>1f95a</string>
+<string>1f95b</string>
+<string>1f95c</string>
+<string>1f95d</string>
+<string>1f95e</string>
+<string>1f9c0</string>
+<string>2615</string>
+</array></dict></plist>
