--- a/g5Mindr/g5Mindr/Resources/Emojis/emoji_nature.plist
+++ b/g5Mindr/g5Mindr/Resources/Emojis/emoji_nature.plist
@@ -1,167 +1,110 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   emoji_nature.plist
-   g5Mindr
-
-   Created by Charles Cliff on 8/9/16.
-   Copyright (c) 2016 Charles Cliff. All rights reserved.
--->
-<plist version="1.0">
-    <dict>
-        <key>emoticons</key>
-        <array>
-<string>🐶</string>
-<string>🐱</string>
-<string>🐭</string>
-<string>🐹</string>
-<string>🐰</string>
-<string>🐻</string>
-<string>🐼</string>
-<string>🐨</string>
-<string>🐯</string>
-<string>🦁</string>
-<string>🐮</string>
-<string>🐷</string>
-<string>🐽</string>
-<string>🐸</string>
-<string>🐙</string>
-<string>🐵</string>
-<string>🙈</string>
-<string>🙉</string>
-<string>🙊</string>
-<string>🐒</string>
-<string>🐔</string>
-<string>🐧</string>
-<string>🐦</string>
-<string>🐤</string>
-<string>🐣</string>
-<string>🐥</string>
-<string>🐺</string>
-<string>🐗</string>
-<string>🐴</string>
-<string>🦄</string>
-<string>🐝</string>
-<string>🐛</string>
-<string>🐌</string>
-<string>🐞</string>
-<string>🐜</string>
-<string>🕷</string>
-<string>🦂</string>
-<string>🦀</string>
-<string>🐍</string>
-<string>🐢</string>
-<string>🐠</string>
-<string>🐟</string>
-<string>🐡</string>
-<string>🐬</string>
-<string>🐳</string>
-<string>🐋</string>
-<string>🐊</string>
-<string>🐆</string>
-<string>🐅</string>
-<string>🐃</string>
-<string>🐂</string>
-<string>🐄</string>
-<string>🐪</string>
-<string>🐫</string>
-<string>🐘</string>
-<string>🐐</string>
-<string>🐏</string>
-<string>🐑</string>
-<string>🐎</string>
-<string>🐖</string>
-<string>🐀</string>
-<string>🐁</string>
-<string>🐓</string>
-<string>🦃</string>
-<string>🕊</string>
-<string>🐕</string>
-<string>🐩</string>
-<string>🐈</string>
-<string>🐇</string>
-<string>🐿</string>
-<string>🐾</string>
-<string>🐉</string>
-<string>🐲</string>
-<string>🌵</string>
-<string>🎄</string>
-<string>🌲</string>
-<string>🌳</string>
-<string>🌴</string>
-<string>🌱</string>
-<string>🌿</string>
-<string>☘</string>
-<string>🍀</string>
-<string>🎍</string>
-<string>🎋</string>
-<string>🍃</string>
-<string>🍂</string>
-<string>🍁</string>
-<string>🌾</string>
-<string>🌺</string>
-<string>🌻</string>
-<string>🌹</string>
-<string>🌷</string>
-<string>🌼</string>
-<string>🌸</string>
-<string>💐</string>
-<string>🍄</string>
-<string>🌰</string>
-<string>🎃</string>
-<string>🐚</string>
-<string>🕸</string>
-<string>🌎</string>
-<string>🌍</string>
-<string>🌏</string>
-<string>🌕</string>
-<string>🌖</string>
-<string>🌗</string>
-<string>🌘</string>
-<string>🌑</string>
-<string>🌒</string>
-<string>🌓</string>
-<string>🌔</string>
-<string>🌚</string>
-<string>🌝</string>
-<string>🌛</string>
-<string>🌜</string>
-<string>🌞</string>
-<string>🌙</string>
-<string>⭐️</string>
-<string>🌟</string>
-<string>💫</string>
-<string>✨</string>
-<string>☄</string>
-<string>☀️</string>
-<string>🌤</string>
-<string>⛅️</string>
-<string>🌥</string>
-<string>🌦</string>
-<string>☁️</string>
-<string>🌧</string>
-<string>⛈</string>
-<string>🌩</string>
-<string>⚡️</string>
-<string>🔥</string>
-<string>💥</string>
-<string>❄️</string>
-<string>🌨</string>
-<string>🔥</string>
-<string>💥</string>
-<string>❄️</string>
-<string>🌨</string>
-<string>☃️</string>
-<string>⛄️</string>
-<string>🌬</string>
-<string>💨</string>
-<string>🌪</string>
-<string>🌫</string>
-<string>☂️</string>
-<string>☔️</string>
-<string>💧</string>
-<string>💦</string>
-<string>🌊</string>
-        </array>
-    </dict>
-</plist>
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"><plist version="1.0"><dict><key>emoticons</key><array>
+<string>1f33a</string>
+<string>1f33b</string>
+<string>1f33c</string>
+<string>1f33e</string>
+<string>1f33f</string>
+<string>1f384</string>
+<string>1f38b</string>
+<string>1f38d</string>
+<string>1f3f5</string>
+<string>1f400</string>
+<string>1f401</string>
+<string>1f402</string>
+<string>1f403</string>
+<string>1f404</string>
+<string>1f405</string>
+<string>1f406</string>
+<string>1f407</string>
+<string>1f408</string>
+<string>1f409</string>
+<string>1f40a</string>
+<string>1f40b</string>
+<string>1f40c</string>
+<string>1f40d</string>
+<string>1f40e</string>
+<string>1f40f</string>
+<string>1f410</string>
+<string>1f411</string>
+<string>1f412</string>
+<string>1f413</string>
+<string>1f414</string>
+<string>1f415</string>
+<string>1f416</string>
+<string>1f417</string>
+<string>1f418</string>
+<string>1f419</string>
+<string>1f41a</string>
+<string>1f41b</string>
+<string>1f41c</string>
+<string>1f41d</string>
+<string>1f41e</string>
+<string>1f41f</string>
+<string>1f420</string>
+<string>1f421</string>
+<string>1f422</string>
+<string>1f423</string>
+<string>1f424</string>
+<string>1f425</string>
+<string>1f426</string>
+<string>1f427</string>
+<string>1f428</string>
+<string>1f429</string>
+<string>1f42a</string>
+<string>1f42b</string>
+<string>1f42c</string>
+<string>1f42d</string>
+<string>1f42e</string>
+<string>1f42f</string>
+<string>1f430</string>
+<string>1f431</string>
+<string>1f432</string>
+<string>1f433</string>
+<string>1f434</string>
+<string>1f435</string>
+<string>1f436</string>
+<string>1f437</string>
+<string>1f438</string>
+<string>1f439</string>
+<string>1f43a</string>
+<string>1f43b</string>
+<string>1f43c</string>
+<string>1f43d</string>
+<string>1f43e</string>
+<string>1f43f</string>
+<string>1f54a</string>
+<string>1f577</string>
+<string>1f578</string>
+<string>1f638</string>
+<string>1f639</string>
+<string>1f63a</string>
+<string>1f63b</string>
+<string>1f63c</string>
+<string>1f63d</string>
+<string>1f63e</string>
+<string>1f63f</string>
+<string>1f640</string>
+<string>1f648</string>
+<string>1f649</string>
+<string>1f64a</string>
+<string>1f940</string>
+<string>1f980</string>
+<string>1f981</string>
+<string>1f982</string>
+<string>1f983</string>
+<string>1f984</string>
+<string>1f985</string>
+<string>1f986</string>
+<string>1f987</string>
+<string>1f988</string>
+<string>1f989</string>
+<string>1f98a</string>
+<string>1f98b</string>
+<string>1f98c</string>
+<string>1f98d</string>
+<string>1f98e</string>
+<string>1f98f</string>
+<string>1f990</string>
+<string>1f991</string>
+<string>2618</string>
+</array></dict></plist>
